--- a/index.html
+++ b/index.html
@@ -1256,7 +1256,7 @@
       <!-- Product-1 -->
       <div class="product-item">
         <div class="image">
-          <img src="static/picture/Product-1.jpg" alt="Product-Image"> <!-- Product Image -->
+          <img src="static/picture/prodecet/1.png" alt="Product-Image"> <!-- Product Image -->
           <div class="options">
             <a href="Wishlist.html" class="icon"><i class="far fa-heart"></i></a><!-- Add to Wishlist Button -->
             <a href="Cart.html" class="icon"><i class="fa-solid fa-cart-shopping"></i></a><!-- Add to Cart Button -->
@@ -1279,7 +1279,7 @@
       <!-- Product-2 -->
       <div class="product-item">
         <div class="image">
-          <img src="static/picture/Product-2.jpg" alt="Product-Image"> <!-- Product Image -->
+          <img src="static/picture/prodecet/2.png" alt="Product-Image"> <!-- Product Image -->
           <div class="options">
             <a href="Wishlist.html" class="icon"><i class="far fa-heart"></i></a><!-- Add to Wishlist Button -->
             <a href="Cart.html" class="icon"><i class="fa-solid fa-cart-shopping"></i></a><!-- Add to Cart Button -->
@@ -1302,7 +1302,7 @@
       <!-- Product-3 -->
       <div class="product-item">
         <div class="image">
-          <img src="static/picture/Product-3.jpg" alt="Product-Image"> <!-- Product Image -->
+          <img src="static/picture/prodecet/3.png" alt="Product-Image"> <!-- Product Image -->
           <div class="options">
             <a href="Wishlist.html" class="icon"><i class="far fa-heart"></i></a><!-- Add to Wishlist Button -->
             <a href="Cart.html" class="icon"><i class="fa-solid fa-cart-shopping"></i></a><!-- Add to Cart Button -->
@@ -1325,7 +1325,7 @@
       <!-- Product-4 -->
       <div class="product-item">
         <div class="image">
-          <img src="static/picture/Product-4.jpg" alt="Product-Image"> <!-- Product Image -->
+          <img src="static/picture/prodecet/4.png" alt="Product-Image"> <!-- Product Image -->
           <div class="options">
             <a href="Wishlist.html" class="icon"><i class="far fa-heart"></i></a><!-- Add to Wishlist Button -->
             <a href="Cart.html" class="icon"><i class="fa-solid fa-cart-shopping"></i></a><!-- Add to Cart Button -->
@@ -1348,7 +1348,7 @@
       <!-- Product-5 -->
       <div class="product-item">
         <div class="image">
-          <img src="static/picture/Product-5.jpg" alt="Product-Image"> <!-- Product Image -->
+          <img src="static/picture/prodecet/5.png" alt="Product-Image"> <!-- Product Image -->
           <div class="options">
             <a href="Wishlist.html" class="icon"><i class="far fa-heart"></i></a><!-- Add to Wishlist Button -->
             <a href="Cart.html" class="icon"><i class="fa-solid fa-cart-shopping"></i></a><!-- Add to Cart Button -->
@@ -1371,7 +1371,7 @@
       <!-- Product-6 -->
       <div class="product-item">
         <div class="image">
-          <img src="static/picture/Product-6.jpg" alt="Product-Image"> <!-- Product Image -->
+          <img src="static/picture/prodecet/6.png" alt="Product-Image"> <!-- Product Image -->
           <div class="options">
             <a href="Wishlist.html" class="icon"><i class="far fa-heart"></i></a><!-- Add to Wishlist Button -->
             <a href="Cart.html" class="icon"><i class="fa-solid fa-cart-shopping"></i></a><!-- Add to Cart Button -->
@@ -1394,7 +1394,7 @@
       <!-- Product-7 -->
       <div class="product-item">
         <div class="image">
-          <img src="static/picture/Product-7.jpg" alt="Product-Image"> <!-- Product Image -->
+          <img src="static/picture/prodecet/7.png" alt="Product-Image"> <!-- Product Image -->
           <div class="options">
             <a href="Wishlist.html" class="icon"><i class="far fa-heart"></i></a><!-- Add to Wishlist Button -->
             <a href="Cart.html" class="icon"><i class="fa-solid fa-cart-shopping"></i></a><!-- Add to Cart Button -->
@@ -1417,7 +1417,7 @@
       <!-- Product-8 -->
       <div class="product-item">
         <div class="image">
-          <img src="static/picture/Product-8.jpg" alt="Product-Image"> <!-- Product Image -->
+          <img src="static/picture/Product-7.jpg" alt="Product-Image"> <!-- Product Image -->
           <div class="options">
             <a href="Wishlist.html" class="icon"><i class="far fa-heart"></i></a><!-- Add to Wishlist Button -->
             <a href="Cart.html" class="icon"><i class="fa-solid fa-cart-shopping"></i></a><!-- Add to Cart Button -->
